more configuration options available

--- a/src/components/builder/builder.less
+++ b/src/components/builder/builder.less
@@ -5305,12 +5305,13 @@
     padding: 5px;
     color: #555;
     margin-top: -1px;
-    border-bottom-left-radius: 10px;
     font-size: 14px !important;
     cursor: pointer !important;
     white-space: normal !important;
     line-height: 22px !important;
     z-index:1000 !important;
+    border: 1px solid #0f0;
+    border-left: none;
   }
 
   .configurable-section:hover .config-buttons {
