--- a/src/components/site/templates/standard/section/leftImage/public.html
+++ b/src/components/site/templates/standard/section/leftImage/public.html
@@ -7,17 +7,17 @@
             </div>
 
             <div class="col-sm-6 col-sm-offset-1">
-                <h6 class="text-muted text-uppercase">Rich Information</h6>
-                <h3 class="m-t-0">Make informed decisions with historical & real time data.</h3>
-                <p class="lead m-b-md">We combine immediate real time events with rich historical data to help answer the toughest questions about retention, growth, and engagement.</p>
+                <h6 class="text-muted text-uppercase">{{section.settings.tag_text}}</h6>
+                <h3 class="m-t-0">{{section.settings.header_text}}</h3>
+                <p class="lead m-b-md">{{section.settings.description_text}}</p>
                 <div class="row hidden-sm">
                     <div class="col-sm-6 m-b-md">
-                        <h5 class="m-y-0">Data frequency</h5>
-                        <p>We poll for data on a millisecond basis. You can react to new information in seconds rather than days. <a href="#" class="text-primary">Learn more.</a></p>
+                        <h5 class="m-y-0">{{section.settings.col1_header}}</h5>
+                        <p ng-bind-html="safeHtml( section.settings.col1_text )"></p>
                     </div>
                     <div class="col-sm-6">
-                        <h5 class="m-y-0">Reliability & uptime</h5>
-                        <p>We process our data across a massively distributed network of reliable servers to ensure 99.99% uptime, always. <a href="#" class="text-primary">Learn more</a>.</p>
+                        <h5 class="m-y-0">{{section.settings.col2_header}}</h5>
+                        <p ng-bind-html="safeHtml( section.settings.col2_text )"></p>
                     </div>
                 </div>
             </div>
