--- a/src/components/site/templates/standard/section/leftImage/configure.html
+++ b/src/components/site/templates/standard/section/leftImage/configure.html
@@ -2,22 +2,22 @@
     <div class="container">
         <div class="row app-align-center">
 
-            <div class="col-sm-5 hidden-xs">
+            <div class="col-sm-5 hidden-xs" config-settings ng-model="section.settings.display_image">
                 <img herc-upload ng-model="section.settings.image" class="app-iphone" src="{{section.settings.image}}" style="width: 100%;cursor:pointer;">
             </div>
 
             <div class="col-sm-6 col-sm-offset-1">
-                <h6 class="text-muted text-uppercase">Rich Information</h6>
-                <h3 class="m-t-0">Make informed decisions with historical & real time data.</h3>
-                <p class="lead m-b-md">We combine immediate real time events with rich historical data to help answer the toughest questions about retention, growth, and engagement.</p>
+                <h6 class="text-muted text-uppercase" config-settings ng-model="section.settings.display_tag" buttons="no" blur="submit" editable-text="section.settings.tag_text">{{section.settings.tag_text}}</h6>
+                <h3 class="m-t-0" config-settings ng-model="section.settings.display_tag" buttons="no" blur="submit" editable-text="section.settings.header_text">{{section.settings.header_text}}</h3>
+                <p class="lead m-b-md" config-settings ng-model="section.settings.display_tag" buttons="no" blur="submit" editable-text="section.settings.description_text">{{section.settings.description_text}}</p>
                 <div class="row hidden-sm">
-                    <div class="col-sm-6 m-b-md">
-                        <h5 class="m-y-0">Data frequency</h5>
-                        <p>We poll for data on a millisecond basis. You can react to new information in seconds rather than days. <a href="#" class="text-primary">Learn more.</a></p>
+                    <div class="col-sm-6 m-b-md" config-settings ng-model="section.settings.display_tag">
+                        <h5 class="m-y-0" buttons="no" blur="submit" editable-text="section.settings.col1_header">{{section.settings.col1_header}}</h5>
+                        <p buttons="no" blur="submit" editable-textarea="section.settings.col1_text" ng-bind-html="safeHtml( section.settings.col1_text )"></p>
                     </div>
-                    <div class="col-sm-6">
-                        <h5 class="m-y-0">Reliability & uptime</h5>
-                        <p>We process our data across a massively distributed network of reliable servers to ensure 99.99% uptime, always. <a href="#" class="text-primary">Learn more</a>.</p>
+                    <div class="col-sm-6" config-settings ng-model="section.settings.display_tag">
+                        <h5 class="m-y-0" buttons="no" blur="submit" editable-text="section.settings.col2_header">{{section.settings.col2_header}}</h5>
+                        <p buttons="no" blur="submit" editable-textarea="section.settings.col2_text" ng-bind-html="safeHtml( section.settings.col2_text )"></p>
                     </div>
                 </div>
             </div>
