--- a/src/components/site/templates/standard/section/header/configure.html
+++ b/src/components/site/templates/standard/section/header/configure.html
@@ -12,7 +12,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" config-settings ng-model="section.settings.display_button" delete-function="toggleDisplayButton" show-function="toggleDisplayButton" href="">
-                    <strong ng-if="section.settings.display_button && section.settings.display_button != '0'" buttons="no" blur="submit" editable-text="section.settings.button_text" e-style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;" style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">
+                    <strong ng-if="section.settings.display_button && section.settings.display_button != '0'" buttons="no" blur="submit" editable-text="section.settings.button_text" e-style="background: #fff !important; padding: 12px; border-radius: 4px; color: #28669F;" style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">
                         {{section.settings.button_text}}
                     </strong>
                 </a>
