--- a/src/components/site/templates/standard/section/header/configure.html
+++ b/src/components/site/templates/standard/section/header/configure.html
@@ -20,7 +20,7 @@
             <div class="navbar-collapse collapse text-uppercase">
                 <ul class="nav navbar-nav navbar-right">
                     <li ng-repeat="item in section.settings.menu_items" class="menu-item">
-                        <a ng-if="item.type == 'url'" buttons="no" blur="submit" editable-text="item.text" config-settings delete-function="removeMenuItem" settings-function="menuItemSettings" ng-model="item">
+                        <a ng-if="item.type == 'url'" buttons="no" blur="submit" editable-text="item.text" settings="{'no-show': true}" config-settings delete-function="removeMenuItem" settings-function="menuItemSettings" ng-model="item">
                             {{item.text}}
                         </a>
                     </li>
