--- a/src/components/builder/builder.html
+++ b/src/components/builder/builder.html
@@ -20,13 +20,14 @@
                         <form class="form-inline">
                             <div class="form-group">
                                 <label for="exampleInputName2" style="padding-right: 20px;">Title</label>
-                                <input type="text" class="form-control" id="exampleInputName2" ng-model="content.title" placeholder="Title goes here" />
+                                <input type="text" class="form-control" id="exampleInputName2" ng-blur="setPermalink()" ng-model="content.title" placeholder="Title goes here" />
                             </div>
                             <div class="form-group" style="padding-left:20px;padding-right:20px;">
                                 <label for="exampleInputEmail2" style="padding-right: 20px;">Permalink</label>
-                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model="content.permalink" placeholder="url-goes-here">
+                                <input type="text" class="form-control" id="exampleInputEmail2" ng-blur="setPermalink()" ng-model="content.permalink" placeholder="url-goes-here">
                             </div>
                             <button type="button" class="btn btn-success" ng-click="save()">Save</button>
+                            <a type="button" class="btn btn-info" ng-if="content.id" href="/{{content.permalink}}" target="_blank">View</a>
                         </form>
                     </li>
                 </ul>
