columns have settings on top now for image sections

--- a/src/components/site/templates/standard/section/footer/configure.html
+++ b/src/components/site/templates/standard/section/footer/configure.html
@@ -5,7 +5,7 @@
                 <ul class="list-unstyled list-spaced">
                     <li class="m-b"><h6 class="text-uppercase">About</h6></li>
                     <li class="text-muted">
-                        We’ve been working on Go Analytics for the better part of a decade and are super proud of what we’ve created. If you’d like to learn more, or are interested in a job, contact us anytime at <a href="mailto: themes@getbootstrap.com">themes@getbootstrap.com</a>.
+                        We've been working on Go Analytics for the better part of a decade and are super proud of what we've created. If you'd like to learn more, or are interested in a job, contact us anytime at <a href="mailto: themes@getbootstrap.com">themes@getbootstrap.com</a>.
                     </li>
                 </ul>
             </div>
