we don't put in an empty image if the x is pressed on the upload form anymore

--- a/src/components/common/media.html
+++ b/src/components/common/media.html
@@ -1,6 +1,6 @@
 <span class="builder">
     <div class="modal-header media-selector">
-        <button type="button" class="close" ng-click="ok()" aria-hidden="true">&times;</button>
+        <button type="button" class="close" ng-click="cancel()" aria-hidden="true">&times;</button>
         <h4 class="modal-title">Media Upload</h4>
     </div>
 
