--- a/src/components/site/templates/standard/section/rightImage/configure.html
+++ b/src/components/site/templates/standard/section/rightImage/configure.html
@@ -3,7 +3,7 @@
         <div class="row app-align-center">
 
             <div class="col-sm-6">
-                <h6 class="text-muted text-uppercase" config-settings ng-model="section.settings.display_tag" buttons="no" blur="submit" editable-text="section.settings.tag_text">{{section.settings.tag_text}}</h6>
+                <h6 class="text-muted text-uppercase" config-settings ng-model="section.settings.display_tag" buttons="no" blur="submit" editable-text="section.settings.tag_text" settings="{position: 'top'}">{{section.settings.tag_text}}</h6>
                 <h3 class="m-t-0" config-settings ng-model="section.settings.display_tag" buttons="no" blur="submit" editable-text="section.settings.header_text">{{section.settings.header_text}}</h3>
                 <p class="lead m-b-md" config-settings ng-model="section.settings.display_tag" buttons="no" blur="submit" editable-text="section.settings.description_text">{{section.settings.description_text}}</p>
                 <div class="row hidden-sm">
